# wacky_traits

./: Cargo.toml  LICENSE  README.md
src/: collector.rs  collectors.rs  lib.rs  mapper.rs  mappers.rs  patterns.rs  test.rs  tuple.rs
src/new/: collector.rs  collectors.rs  mapper.rs  mappers.rs  mod.rs
src/old/: collector.rs  collectors.rs  mapper.rs  mappers.rs  mod.rs
